Fix z-index of active "day" element

--- a/src/client/components/DayPicker/DayPicker.less
+++ b/src/client/components/DayPicker/DayPicker.less
@@ -32,6 +32,7 @@
   transition: transform 0.1s ease;
 
   &:active:focus {
+    z-index: 10;
     transform: scale(1.4);
   }
   &:focus {
